# template_app_wxx

./: .gitignore  CMakeLists.txt  Developer Command Prompt for VS 2019.lnk  Project.sln  cmd_app.lnk
application/: Application.vcxproj  Application.vcxproj.filters  CMakeLists.txt
application/source/: Main.cpp  Main.hpp  stdafx.cpp  stdafx.h  targetver.h
application/source/bl/: BLWnd.cpp  BLWnd.hpp  bl.cpp  bl.hpp  scroll.hpp  stdafx.h  stopwatch.hpp
application/source/res/: Application.rc  resource.h
application/source/res/wxx/: resource_wxx.h
application/source/window/: EventMessageDocker.cpp  EventMessageDocker.hpp  MainFrame.cpp  MainFrame.hpp  MyDocker.cpp  MyDocker.hpp  MyID.hpp  MyListViewDocker.cpp  MyListViewDocker.hpp  MyTabbedMDI.cpp  MyTabbedMDI.hpp  MyView.cpp  MyView.hpp  MyWinApp.cpp  MyWinApp.hpp  MyWindowDocker.cpp  MyWindowDocker.hpp  MyWndDocker.cpp  MyWndDocker.hpp  WindowID.hpp  png_image_list_loader.cpp  png_image_list_loader.hpp  stdafx.h
